objects/Mgmt_Goal__c.object
<CustomObject>
    <fields>
        <fullName>Active_Goal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Goal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Actual_Bookings__c</fullName>
        <label>Actual Bookings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commit_Change__c</fullName>
        <formula>if(
(isnull( Updated_Commit__c)),0, Updated_Commit__c- First_Commit__c )</formula>
        <label>Commit Change</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>First_Commit__c</fullName>
        <label>First Commit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Mgmt_Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Month_End__c</fullName>
        <label>Month End</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>15th</fullName>
                </value>
                <value>
                    <fullName>31st</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Month_Start__c</fullName>
        <label>Month Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Monthly_Quota__c</fullName>
        <label>Monthly Quota</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Percent_to_quota__c</fullName>
        <formula>Actual_Bookings__c / Monthly_Quota__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent to Quota</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Stretch_Commit__c</fullName>
        <label>Stretch Commit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Updated_Commit__c</fullName>
        <label>Updated Commit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Weekly_Commit__c</fullName>
        <label>This Week's Commit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Mgmt Goal</label>
    <listViews>
        <fullName>Rogers_Support_Mgmt_Goal</fullName>
        <filterScope>Queue</filterScope>
        <label>Rogers Support</label>
        <queue>Rogers_Support</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Send_To_Rogers_Mgmt_Goal</fullName>
        <filterScope>Queue</filterScope>
        <label>Send To Rogers</label>
        <queue>Send_To_Rogers</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Goal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mgmt Goals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>